fabric/support/test/tests/noble_ui/trait_invalid_item.stderr
error: Invalid noble::constant in noble::config, expected type trait item
 --> $DIR/trait_invalid_item.rs:9:3
  |
9 |         const U: u8 = 3;
  |         ^^^^^
